--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "form-data": "^4.0.5",
+    "multer": "^2.0.2",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
