--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "form-data": "^4.0.5",
     "multer": "^2.0.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
